samples/_failures_safe/1761716308_d24e97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7f0cefc.c: In function ‘main’:
./samples/SAFE/__tmp_f7f0cefc.c:142:9: error: expected expression at end of input
  142 |         input_buffer[len - 1] =
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_f7f0cefc.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7f0cefc.c:142:9: error: expected declaration or statement at end of input
